# agente-scratch

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
agente_scratch/: __init__.py  core.py
agente_scratch/agent/: graph.py  mcp_server.py  tools.py
agente_scratch/cli/: app.py
tests/: conftest.py  test_core.py
tests/agent/: test_tools.py
tests/cli/: test_app.py
