[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ─── Metadatos del proyecto ───────────────────────────────────────────────────
[project]
name = "agente-scratch"
version = "2.3.0"
description = "Generador de proyectos Scratch 3.0 con IA — CLI y servidor MCP"
authors = [{ name = "Dev Joshe Gatito", email = "ayasupay@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"

keywords = ["scratch", "ia", "gemini", "juegos", "educacion", "mcp"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Education",
    "Topic :: Games/Entertainment",
]

# ─── Dependencias de runtime ──────────────────────────────────────────────────
dependencies = [
    "google-genai>=2.6.0",
    "python-dotenv>=1.2.2",
    "scratchattach>=2.1.17",
    "requests>=2.34.2",
    "Pillow>=10.0.0",
    "textual>=0.50.0",
    "mcp[cli]>=1.0.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langgraph>=0.2.0",
    "langgraph-prebuilt>=0.1.0",
]

# ─── Dependencias de desarrollo ───────────────────────────────────────────────
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "types-requests>=2.31.0",
]

# ─── Puntos de entrada ────────────────────────────────────────────────────────
[project.scripts]
agentescratch     = "agente_scratch.cli.app:main"
agentescratch-mcp = "agente_scratch.agent.mcp_server:main"

[project.urls]
Homepage = "https://github.com/joshegatito/agente-scratch"

# ─── Descubrimiento de paquetes ───────────────────────────────────────────────
[tool.setuptools.packages.find]
where = ["."]
include = ["agente_scratch*"]

[tool.setuptools.package-data]
"agente_scratch" = ["assets/*", "scratch.png"]

# ─── Ruff — linter y formatter ────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["agente_scratch", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM"]
ignore = [
    "E501",  # longitud de linea — gestionada por el formatter
    "B008",  # llamadas a funciones en defaults
]

[tool.ruff.lint.isort]
known-first-party = ["agente_scratch"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ─── Mypy — verificacion de tipos ─────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["scratchattach.*", "langgraph.*", "langchain_google_genai.*"]
ignore_missing_imports = true

# ─── Pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests que hacen I/O real o llaman APIs externas",
]
addopts = "--tb=short"

# ─── Coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["agente_scratch"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 75
show_missing = true
